--- a/MySecurity2/src/main/resources/application.properties
+++ b/MySecurity2/src/main/resources/application.properties
@@ -3,4 +3,4 @@ Spring.datasource.username=root
 Spring.datasource.password=AdminDef
 Spring.datasource.driverClassName=com.mysql.jdbc.Driver
 Spring.jpa.database=MYSQL
-
+Spring.servlet.multipart.max-file-size=10MB
